@@ -6,7 +6,9 @@
 package org.javaee7.jaxrs.jsonp;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+
 import javax.json.Json;
 import javax.json.JsonObject;
 import javax.ws.rs.client.Client;
@@ -14,6 +16,7 @@ import javax.ws.rs.client.ClientBuilder;
 import javax.ws.rs.client.Entity;
 import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.MediaType;
+
 import org.jboss.arquillian.container.test.api.Deployment;
 import org.jboss.arquillian.junit.Arquillian;
 import org.jboss.arquillian.test.api.ArquillianResource;
@@ -22,7 +25,6 @@ import org.jboss.shrinkwrap.api.spec.WebArchive;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
-import static org.junit.Assert.*;
 import org.junit.runner.RunWith;
 
 /**
@@ -40,7 +42,7 @@ public class MyResourceTest {
     @Before
     public void setUp() throws MalformedURLException {
         client = ClientBuilder.newClient();
-        target = client.target(new URL(base, "webresources/endpoint").toExternalForm());
+        target = client.target(URI.create(new URL(base, "webresources/endpoint").toExternalForm()));
     }
 
     @After
